# Insight-backend

./: Dockerfile  docker-compose.yml  pyproject.toml  run_migrations.sh
insight_backend/: config.py  db.py  main.py
insight_backend/migrations/: env.py
insight_backend/migrations/versions/: 0876380e4426_updated.py  2145ba96f3cb_renamed.py  24074688f36d_testing.py  2dc6705f12f1_added.py  470145657097_recreate.py  472356b22aca_rearranged.py  4774ee5edd4f_recreate_db.py  5dc6df0eaf70_added.py  61e250d33a62_created.py  66cc0c791c96_swtiched.py  745110e6471c_updated.py  857042938cec_added.py  8b35850fad12_added.py  959be8a8e56c_made.py  bc60f697fc7f_added.py  c39720be774d_changed.py  dd346cc34add_added.py  e2476ada594b_drop.py
insight_backend/models/: admin.py  auth.py  content.py  course.py  creator.py  user.py
insight_backend/routers/: admin.py  content.py  course.py  creator.py  user.py
insight_backend/utils/: auth.py
